create user table and use dotenv-rails to manage env
Signed-off-by: Arisu <tsungying721@gmail.com>

--- a/.gitignore
+++ b/.gitignore
@@ -22,3 +22,12 @@
 
 .byebug_history
 .versions.conf
+
+# Ignore env files
+.env*
+!.env.sample
+!.env*.enc
+!.env.test.ci
+
+# Ignore docker files
+docker-compose.yml
